--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
-    "antd": "^4.14.0",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
